💄(frontend) fix text selection on search input on firefox
A `user-select: none` rule was applied to the search input that makes text
unselectable only on Firefox

--- a/src/frontend/scss/objects/_react-autosuggest.scss
+++ b/src/frontend/scss/objects/_react-autosuggest.scss
@@ -7,8 +7,9 @@
   &__input {
     @extend .form-control;
     @include button-base($text-align: left, $form-factor: 'pill');
-    padding-right: 3.6rem;
     height: auto;
+    padding-right: 3.6rem;
+    user-select: inherit;
     @if r-theme-val(base-search, input-border) {
       border: 1px solid r-theme-val(base-search, input-border);
     }
